// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/search /association/{rna} should return an association 1`] = `
Object {
  "association": Object {
    "denomination_rna": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "string",
        "value": "OSIRIS_ENTITY_FIXTURE",
      },
    ],
    "etablisements_siret": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "object",
        "value": Array [
          "00000000000001",
        ],
      },
    ],
    "etablissements": Array [
      Object {
        "adresse": Array [
          Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "object",
            "value": Object {},
          },
        ],
        "contacts": Array [
          Array [
            Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "object",
              "value": Object {},
            },
          ],
        ],
        "demandes_subventions": Array [
          Object {
            "actions_proposee": Array [],
            "annee_demande": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "number",
              "value": 2022,
            },
            "contact": Object {
              "email": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
            },
            "date_commision": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "object",
              "value": "2022-01-01T00:00:00.000Z",
            },
            "dispositif": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "montants": Object {
              "accorde": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
              "demande": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
              "propose": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
              "total": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
            },
            "pluriannualite": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "service_instructeur": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "siret": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "string",
              "value": "00000000000001",
            },
            "sous_dispositif": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "status": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "territoires": Array [],
            "versement": Object {
              "acompte": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
              "compensation": Object {
                "n-1": Object {
                  "last_update": "2022-01-01T00:00:00.000Z",
                  "provider": "Osiris",
                  "type": "undefined",
                },
                "reversement": Object {
                  "last_update": "2022-01-01T00:00:00.000Z",
                  "provider": "Osiris",
                  "type": "undefined",
                },
              },
              "realise": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
              "solde": Object {
                "last_update": "2022-01-01T00:00:00.000Z",
                "provider": "Osiris",
                "type": "undefined",
              },
            },
          },
        ],
        "information_banquaire": Array [],
        "nic": Array [
          Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "string",
            "value": "00001",
          },
        ],
        "representants_legaux": Array [
          Array [
            Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "object",
              "value": Object {},
            },
          ],
        ],
        "siege": Array [
          Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
        ],
        "siret": Array [
          Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "string",
            "value": "00000000000001",
          },
        ],
        "versements": Array [],
      },
    ],
    "rna": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "string",
        "value": "W000000001",
      },
    ],
    "siren": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "string",
        "value": "000000000",
      },
    ],
    "versements": Array [],
  },
  "success": true,
}
`;

exports[`/search /associations/{input} should return an Association from its RNA 1`] = `
Object {
  "result": Array [
    Object {
      "lastUpdate": Any<String>,
      "name": "Association Name",
      "provider": "Provider Name",
      "rna": "W000000000",
      "siren": "000000001",
    },
  ],
  "success": true,
}
`;

exports[`/search /associations/{input} should return an Association from its Siren 1`] = `
Object {
  "result": Array [
    Object {
      "lastUpdate": Any<String>,
      "name": "Association Name",
      "provider": "Provider Name",
      "rna": "W000000000",
      "siren": "000000001",
    },
  ],
  "success": true,
}
`;

exports[`/search /associations/{input} should return an AssociationNameEntity from its name 1`] = `
Object {
  "result": Array [
    Object {
      "lastUpdate": Any<String>,
      "name": "Association Name",
      "provider": "Provider Name",
      "rna": "W000000000",
      "siren": "000000001",
    },
  ],
  "success": true,
}
`;

exports[`/search /etablissement/{siret} should return an association 1`] = `
Object {
  "etablissement": Object {
    "adresse": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "object",
        "value": Object {},
      },
    ],
    "association": Object {
      "denomination_rna": Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "string",
          "value": "OSIRIS_ENTITY_FIXTURE",
        },
      ],
      "etablisements_siret": Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "object",
          "value": Array [
            "00000000000001",
          ],
        },
      ],
      "rna": Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "string",
          "value": "W000000001",
        },
      ],
      "siren": Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "string",
          "value": "000000000",
        },
      ],
    },
    "contacts": Array [
      Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "object",
          "value": Object {},
        },
      ],
    ],
    "demandes_subventions": Array [
      Object {
        "actions_proposee": Array [],
        "annee_demande": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "number",
          "value": 2022,
        },
        "contact": Object {
          "email": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
        },
        "date_commision": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "object",
          "value": "2022-01-01T00:00:00.000Z",
        },
        "dispositif": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "undefined",
        },
        "montants": Object {
          "accorde": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
          "demande": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
          "propose": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
          "total": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
        },
        "pluriannualite": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "undefined",
        },
        "service_instructeur": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "undefined",
        },
        "siret": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "string",
          "value": "00000000000001",
        },
        "sous_dispositif": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "undefined",
        },
        "status": Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "undefined",
        },
        "territoires": Array [],
        "versement": Object {
          "acompte": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
          "compensation": Object {
            "n-1": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
            "reversement": Object {
              "last_update": "2022-01-01T00:00:00.000Z",
              "provider": "Osiris",
              "type": "undefined",
            },
          },
          "realise": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
          "solde": Object {
            "last_update": "2022-01-01T00:00:00.000Z",
            "provider": "Osiris",
            "type": "undefined",
          },
        },
      },
    ],
    "information_banquaire": Array [],
    "nic": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "string",
        "value": "00001",
      },
    ],
    "representants_legaux": Array [
      Array [
        Object {
          "last_update": "2022-01-01T00:00:00.000Z",
          "provider": "Osiris",
          "type": "object",
          "value": Object {},
        },
      ],
    ],
    "siege": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "undefined",
      },
    ],
    "siret": Array [
      Object {
        "last_update": "2022-01-01T00:00:00.000Z",
        "provider": "Osiris",
        "type": "string",
        "value": "00000000000001",
      },
    ],
    "versements": Array [],
  },
  "success": true,
}
`;
